--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,11 @@ canvas {
   // opacity: 0.5;
 }
 
+#player-canvas {
+  // background-color: green;
+  // opacity: 0.5;
+}
+
 #game-container {
   display: block;
   position: relative;
