--- a/src/index.scss
+++ b/src/index.scss
@@ -58,16 +58,17 @@ canvas {
 .buttons {
   display: block;
   position: absolute;
-  left: 300px;
-  top: 600px;
+  left: 295px;
+  top: 575px;
   justify-content: center;
-  cursor: pointer;
 }
 
 .buttons button {
   padding: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   margin-top: -70px;
-  margin-right: 50px;
+  cursor: pointer;
 }
 
 .buttons button a {
